# fastapi_runtime_details_collector

./: README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
grafana/: fastapi-runtime-details.json
prometheus/: alerts.yml
src/fastapi_runtime_details_collector/: __init__.py  _collector.py  _tasks.py
