[build-system]
requires = ["setuptools>=61", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-runtime-details-collector"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "anyio>=4.0",
    "prometheus_client>=0.17",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
