[build-system]
requires = ["setuptools>=61", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-runtime-details-collector"
dynamic = ["version"]
description = "Prometheus metrics collector for FastAPI event loop lag and thread pool utilization"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "anyio>=4.0",
    "prometheus_client>=0.17",
]

[project.urls]
Repository = "https://github.com/numihfrance-rennes/fastapi_runtime_details_collector"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
